--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dnd_app_05",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.3.0",
+  "description": "dnd dm tool next level",
   "main": "tailwind.config.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/style.css --watch",
